@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-02T08:09:15Z",
-  "count" : 4,
-  "count_minmax" : [ 4, 22 ],
-  "count_decinc" : [ -18, +22 ],
+  "timestamp" : "2022-07-02T16:09:03Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 22 ],
+  "count_decinc" : [ -21, +22 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
