@@ -1,10 +1,10 @@
 {
-  "count": 23,
+  "count": 20,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 4,
+      "count": 1,
       "uniques": 1
     },
     {
