@@ -1,3 +1,10 @@
+2022-07-02T16:09:03Z:
+* notice: last 14d: unq all: 1 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 103 1661 / 107 1684
+* notice: next accum: outdated-unq outdated-all / unq all: 103 1661 / 107 1681
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -3 / +1 +22 -0 -21 / 1 1
+* notice: removed / changed dates: [] / [2022-06-18]
+
 2022-07-02T08:09:15Z:
 * notice: last 14d: unq all: 1 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 103 1661 / 107 1702
